<resources>
    <string name="app_name">TemiApp</string>
    <string name="ready_to_move">Ready to Move!</string>
    <string name="close">Close</string>
    <string name="qr_code_image">QR Code Image</string>
    <string name="purchase">PURCHASE</string>
    <string name="_0_0_bath">0.0 Bath</string>
    <string name="product3">Product 3</string>
    <string name="product2">Product 2</string>
    <string name="product1">Product 1</string>
    <string name="todo">TODO</string>
    <string name="TemiApp" />
    <string name="error_connecting_to_server">Error connecting to server</string>
    <string name="retry">Retry</string>
    <string name="detail" />
    <string name="Date">Date</string>
    <string name="information1">information 1</string>
    <string name="information2">information 2</string>
    <string name="information3">information 3</string>
    <string name="more_detail">More Detail</string>
</resources>