<?xml version="1.0" encoding="utf-8"?>
<!-- item_product.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Error message TextView (hidden by default) -->
    <TextView
        android:id="@+id/error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="100sp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- First Product -->

    <ImageView
        android:id="@+id/product_image1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/product1"
        app:layout_constraintBottom_toTopOf="@id/product_name1"
        app:layout_constraintEnd_toStartOf="@id/product_image2"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/product_name1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/information1"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/product_price1"
        app:layout_constraintEnd_toEndOf="@id/product_image1"
        app:layout_constraintStart_toStartOf="@id/product_image1"
        app:layout_constraintTop_toBottomOf="@id/product_image1" />

    <!-- Product Price TextView -->

    <TextView
        android:id="@+id/product_price1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Date"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toEndOf="@id/product_image1"
        app:layout_constraintStart_toStartOf="@id/product_image1"
        app:layout_constraintTop_toBottomOf="@id/product_name1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_500"
        android:text="@string/more_detail"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/product_image1"
        app:layout_constraintStart_toStartOf="@id/product_image1"
        app:layout_constraintTop_toBottomOf="@id/product_price1" />

    <!-- Second Product -->

    <ImageView
        android:id="@+id/product_image2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/product2"
        app:layout_constraintBottom_toTopOf="@id/product_name2"
        app:layout_constraintEnd_toStartOf="@id/product_image3"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toEndOf="@id/product_image1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/product_name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/information2"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/product_price2"
        app:layout_constraintEnd_toEndOf="@id/product_image2"
        app:layout_constraintStart_toStartOf="@id/product_image2"
        app:layout_constraintTop_toBottomOf="@id/product_image2" />

    <TextView
        android:id="@+id/product_price2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Date"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintEnd_toEndOf="@id/product_image2"
        app:layout_constraintStart_toStartOf="@id/product_image2"
        app:layout_constraintTop_toBottomOf="@id/product_name2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_500"
        android:text="@string/more_detail"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/product_image2"
        app:layout_constraintStart_toStartOf="@id/product_image2"
        app:layout_constraintTop_toBottomOf="@id/product_price2" />

    <!-- Third Product -->

    <ImageView
        android:id="@+id/product_image3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/product3"
        app:layout_constraintBottom_toTopOf="@id/product_name3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toEndOf="@id/product_image2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/product_name3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/information3"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/product_price3"
        app:layout_constraintEnd_toEndOf="@id/product_image3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/product_image3"
        app:layout_constraintTop_toBottomOf="@id/product_image3" />

    <TextView
        android:id="@+id/product_price3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Date"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintEnd_toEndOf="@id/product_image3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/product_image3"
        app:layout_constraintTop_toBottomOf="@id/product_name3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_500"
        android:text="@string/more_detail"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/product_image3"
        app:layout_constraintStart_toStartOf="@id/product_image3"
        app:layout_constraintTop_toBottomOf="@id/product_price3" />

</androidx.constraintlayout.widget.ConstraintLayout>
