<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.QRCodeActivity">

    <!-- QR Code Image View -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="686dp"
        android:layout_height="728dp"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:contentDescription="@string/qr_code_image"
        app:layout_constraintBottom_toTopOf="@+id/closeButton"
        app:layout_constraintEnd_toStartOf="@+id/detailScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CustomShape" />

    <!-- ScrollView wrapping TextView for scrolling content -->

    <!-- Close Button -->
    <ScrollView
        android:id="@+id/detailScrollView"
        android:layout_width="562dp"
        android:layout_height="650dp"
        app:layout_constraintBottom_toBottomOf="@+id/qrCodeImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/qrCodeImageView"
        app:layout_constraintTop_toTopOf="@+id/qrCodeImageView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.3">

        <!-- Detail Text View inside ScrollView -->
        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/detail"
            android:textSize="48sp"
            tools:ignore="HardcodedText" />
    </ScrollView>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:gravity="center"
        android:onClick="onCloseButtonClick"
        android:padding="12dp"
        android:text="@string/close"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/qrCodeImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
